# VectorDB-Plugin-for-LM-Studio

./: .gitignore  README.md  chat_lm_studio.py  chat_local_model.py  check_gpu.py  compute_utils.py  config.yaml  create_database.py  display_cpu_usage.py  document_chunker.py  document_loader.py  document_processor.py  download_model.py  gui.py  gui_logic.py  gui_table.py  gui_tabs.py  gui_tabs_databases.py  gui_tabs_models.py  gui_tabs_settings.py  gui_tabs_settings_database_create.py  gui_tabs_settings_models.py  gui_tabs_settings_server.py  gui_tabs_settings_whisper.py  gui_tabs_tools.py  gui_tabs_tools_vision.py  gui_threads.py  ingest_improved.py  initialize.py  main.py  metrics_bar.py  metrics_gpu.py  metrics_system.py  misc.md  module_process_images.py  module_transcribe.py  module_voice_recorder.py  number_format.html  nvml.py  pyproject.toml  (+6 more)
User_Manual/: config.yaml  number_format.html  settings.html  tips.html  whisper_quants.html
pyside6/: progress_bar.md  qcache.md  qcalendarwidget.md  qchart.md  qcompleter.md  qdatastream.md  qdialog.md  qdialogs.md  qdockwidget.md  qdrag_and_qdrop.md  qelapsedtimer.md  qeventloop.md  qfilesystemmodel.md  qfilesystemwatcher.md  qfuture.md  qgraphicsitemgroup.md  qjson.md  qmenu.md  qnetworkaccessmanager.md  qprocess.md  qsettings.md  qsortflterproxymodel.md  qsqldatabase.md  qsqlquery.md  qsqltablemodel.md  qstyle.md  qsystemtrayicon.md  qtable.md  qtoolbar.md  qvalidator.md  qvideowidget.md  qxmlstreamer.md  readme.md
src/: bark_module.py  button_module.py  chart_all_gpus.py  chart_models_chat.py  chart_models_vision.py  (+95 more)
(+76 files in other folders)
