[tool.poetry]
name = "src"
version = "0.1.0"
description = "ChromaDB-Plugin-for-LM-Studio"
authors = ["BBC-Esq <bbc@chintellalaw.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
transformers = "4.36.0"
accelerate = "0.25.0"
optimum = "1.15.0"
pydub = "0.25.1"
pyside6 = "6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
